--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
+- Updated to use the version of 'simpcat' that does not conflict with
+  'puppetlabs/concat'.
+
 * Mon Mar 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
 - Fixed a race condition between `service nscd restart` and
   `service nscd reload`.
