(SIMP-1868) Remove `compliance_markup`
This patch removes `compliance_markup` and provides general housekeeping

SIMP-1944 #close
SIMP-1868 #commment updated pupmod-simp-nscd

Change-Id: I242f2bd7ecd5d37d67e28b2b11e9c52e37239abf

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fri Nov 18 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.0-0
+- Removed to compliance_markup dependency
+
 * Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
 - Updated openldap dependency version
 
